--- a/gb/nsc1002_9.md
+++ b/gb/nsc1002_9.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>健康1+1</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/5/n11635267.md#1" target="_blank">墨西哥少年的发明造福全球女性 连总统都按赞！</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/5/n11635267.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/8d1f6f8576af5f4e0231d1967082152e-150x120.jpg" align ="left"></a>胸罩形状的“夏娃触感侦测器”设计理念是当女性穿上它之后，它会在乳癌危及生命之前发出警告。胸罩内层附有超过200个生理传感器，用来监测乳房在一定时间内的变化，如乳房的重量、形状和温度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 3:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11638223.md#1" target="_blank">肺癌高居癌症榜首 常吃胡萝卜可降42％风险</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11638223.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/carrot-lung-cancer_459404314-150x120.jpg" align ="left"></a>据国际癌症协会发布的报告显示，在全球10大癌症中，肺癌高居第一。如何预防肺癌，专家提出许多对策，一项最新研究指出，吃胡萝卜有助于减少肺癌风险高达42%。《英国营养学杂志》的一篇研究指出，食用胡萝卜可以降低患肺癌的风险，特别是肺腺癌。胡萝卜中含β-胡萝卜素，进入人体后会转换成维生素A。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 6:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11637639.md#1" target="_blank">产后恶露多久能排净？恶露不停的中医治疗</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11637639.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/651c0c183bedd46470f7742ac9533ec3-150x120.jpg" align ="left"></a>恶露是妇女产后排出的液体，包括血液、血块、坏死蜕膜组织、宫颈黏液等。一般恶露排净要三周到一个月的时间，不论是剖腹产或是自然产。产后数日内恶露较多，颜色鲜红，由较多的血液、小血块、坏死的蜕膜组织组成，称为血性恶露?虚、瘀、湿热是导致恶露不绝的原因。若体质虚弱或出血过多，难产，可使正气受损，导致正虚；分娩后胎盘......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 11:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/3/n11630099.md#1" target="_blank">好人不等于烂好人 包容有尺度 忍让有限度</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/3/n11630099.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/05/1005160711222184-150x120.jpg" align ="left"></a>你应该听过类似的抱怨：“为什么他把所有事情都推给我做？”或是“我对他这么好，可是他竟这样对我”。又或是“我一再退让，对方反而气势更高。”因为你把自己当地垫，别人当然踩在你头上......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/4/n11632697.md#1" target="_blank">好的人际关系 即使一同竞赛也能共同成长</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/4/n11632697.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/150719230046836-150x120.jpg" align ="left"></a>心中无爱的人不可能无私地爱人。这样的人处于一种没有安全感的真空状态。婚姻的美满需要温情与关爱滋润，一个从未享有温暖、关爱关系的人一旦结了婚，结果不言可喻。那行不通。只是要他们“先爱你自己”也行不通。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11636256.md#1" target="_blank">四物汤是“补血圣品”这时喝最好 但有4大禁忌</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/6/n11636256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/siwutang2-1105-150x120.jpg" align ="left"></a>四物汤堪称女性的补血圣品，而男性也适合饮用。但不是每个人都适合喝四物汤，这个自古以来被视为活血补血的药方，有其应用与禁忌。四物汤主要由当归、川芎、熟地黄跟白芍四味中药组成。女性月经会流失许多血，容易血虚，若经血排出不顺，可能有瘀血积在体内，四物汤可以养血补血。饮用四物汤的禁忌：容易出血，如牙龈出血、月经血量大......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11627674.md#1" target="_blank">秋天养肺食物有哪些？中医荐4味药膳 润肺止咳</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11627674.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/white-fungus-lung-1105_1348344011-150x120.jpg" align ="left"></a>秋天由于早晚气温变化甚大，气候干燥，空气中缺乏水分，故往往容易伤肺，引起燥咳，甚至可使老年人旧病复发或病情加重。中医认为，肺为娇脏，喜润而恶燥。因此，秋季的饮食调养，应以滋阴润燥为主。日常生活中可多吃些银耳、水梨、百合、藕、菱角、芝麻、蜂蜜、柿子等益肺生津的食物，其中，白色食物可以润肺。四种秋季药膳帮你养肺：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 7:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/5/n11635408.md#1" target="_blank">带状疱疹让人剧痛无比 免疫差易发作 2招预防</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/5/n11635408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/herpes-zoster5-1105-150x120.jpg" align ="left"></a>俗称“皮蛇”的带状疱疹，虽然大部分不会致命，但它引发的疼痛与后遗症，让患者痛苦不堪，终生难忘，甚至有“百痛之王”之称。该疾病主要与免疫力差有关，因此免疫力差的族群及生活方式易造成免疫力下滑的人，是高危险群。带状疱疹发病初期，因症状不明显，容易延误就医。预防带状疱疹的2个方法：1. 从肠胃着手，调整免疫力......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/4/n11632691.md#1" target="_blank">力气用尽了？再用一些力 海豹队员的启示</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/4/n11632691.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507180759542024-150x120.jpg" align ="left"></a>欠缺关爱与联系的孩子往往脑子也比正常孩子小。他们日后往往出现行为疾病，造成表现不佳，原因就在这里。这些孩子得在没有必要“电路”的情况下，满足现实需求。而他们所以无法建立这些“电路”，正因为他们少了关系，少了他人的关爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 7:40 PM							</td></tr>
@@ -16,14 +22,6 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11627186.md#1" target="_blank">如何装修居家健身房？ 打造私人训练空间</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11627186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_39417704_Subscription_L-1-150x120.jpg" align ="left"></a>近年来，科学家们渐渐揭开了重量训练、阻力训练的面纱，人们也了解到，健身锻炼是一项安全、健康、老少咸宜的活动。由此，健身房、综合体能中心等也如雨后春笋般出现在大街小巷里。
 然而，有越来越多人因为重视隐私，不喜欢健身房的拥挤、喧闹，或喜欢随时随地“想练就练”的自由，因此开始在家里装修自己的“居家健身房”（home gym），开创专属个人的锻炼空间。
 “训练不.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 11:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11626025.md#1" target="_blank">红豆水除体湿消水肿 但不是人人适合喝</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/1/n11626025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/azuki-bean-drink-water_379468057-150x120.jpg" align ="left"></a>红豆水可有效消除水肿的功能，受到名模、女明星们的喜爱。它在中医师与营养师眼中，也是很棒的饮品。红豆水具消水肿、促进血液循环、改善便秘、改善气色等功效。红豆水本身可促进体内湿气代谢、排除多余水分，从而帮助消除水肿。不是所有水肿者都适合饮用红豆水。民众若要自行煮红豆水，在挑选红豆方面，不必特地到中药房买药用的赤小豆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 2:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/31/n11625568.md#1" target="_blank">皮质醇太高老的快 6个方法对抗“压力荷尔蒙”</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/31/n11625568.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cortisol_154865756-150x120.jpg" align ="left"></a>压力大、年纪增长，都会让体内皮质醇升高。当皮质醇过高时，就会加速皮肤、大脑功能的老化。皮质醇过高具体会带来哪些风险？如何降低体内的皮质醇？美国知名妇科医师莎拉?加特弗莱德分享对抗皮质醇过高的经验方法。在50～89岁之间，男性和女性的皮质醇都会提高20%。降低皮质醇的7个方法：皮质醇不断高升的压力容易产生自由基......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 4:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/31/n11625226.md#1" target="_blank">【胡乃文开讲】古人怎么保养皮肤？教你古代皇后级皮肤美白法</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/31/n11625226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/skin-care-hunaiwen-1031-150x120.jpg" align ="left"></a>以中医的观点来说，“皮肤是五脏六腑的镜子”，大多数的东方女性认为皮肤白皙，看起来就漂亮、健康。在古代，皇后贵妃为博得皇帝的宠爱，也十分注重身体各部位的保养，使得自己“面白脱如雪，身光白如素”。
-
-那么，古人是如何保养皮肤的呢？胡乃文中医师教你古代皇后和民间女性的护肤美容法！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 2:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/30/n11622846.md#1" target="_blank">肺是身体第一道防线！中医传授养肺6个秘诀</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/30/n11622846.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/lung-health-1030-150x120.jpg" align ="left"></a>肺为相府之官，为心君之下、万人之上的大宰相，肺朝百脉。前篇谈论心脏时已经讲到了，所有的血液循环都要经过肺进行氧气交换，全身所有的细胞都要依赖于肺提供氧气才能生存，不仅如此，肺还能过滤出去二氧化碳，肺气是与所有的细胞呼吸相通的。那么，肺的重要性就可想而知啦。怎样养肺、保持肺的健康呢？养肺的食物和中药材......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 2:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/30/n11622944.md#1" target="_blank">六种室内植物 净化空气又纾压</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/30/n11622944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/1605082154342483-150x120.jpg" align ="left"></a>您是否觉得生活压力大，需要纾解压力的管道呢？栽种室内植物是很好的选择，这些绿意盎然的盆栽不仅可以美化空间，也能让人抛开烦恼，改善心情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 1:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/28/n11616488.md#1" target="_blank">观大便颜色 知身体健康状况</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/28/n11616488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/74962005-xray-human-s-large-intestine-150x120.jpg" align ="left"></a>大便除了形状会透露身体健康讯息，今天要介绍另一个从大便颜色来观察身体健康，大便颜色，有深、有浅、有黄、有黑、有杂色，临床上，这也是问大便的诊断中，一般人最不知该如何回答的，因为绝大多数人都是，只感觉自己的大便是黄黄的，但若细究，是浅黄、深黄，有无夹黑色、或灰色、暗红色或其他颜色，大多数人都回答不出来，故今天就要教大家，如何观察大便颜色。让读者可以在日后上完厕.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月31日 5:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/4/n11631906.md#1" target="_blank">服用标靶药物手脚指头疼痛难耐 彰基5CC药水搞定</a><br></h3>家住云林县的85岁老翁黄昭农，四年前因肺腺癌手术后肿瘤指标仍偏高，经彰基胸腔科蔡伟宏医师介绍，由皮肤科主治医师邱足满收治一个月即有显着改善，4日回诊时特地穿上运动鞋给邱医师看，感谢她让将近五年无法穿鞋的老人重新拾回信心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 3:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_9.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nsc1002_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc1002_9.htm">http://www.epochtimes.com/gb/nsc1002_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
